syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message Post {
    int32 postId = 1;
    string description = 2;
    string domain = 3;
    string date = 4;
    repeated Comment comments = 5;
}

message Comment{
    int32 commentId = 1;
    string text = 2;
    int32 postPostId = 3;
    Post post = 4;
}


message AddCommentRequest{
    Comment comment = 1;
}

message AddCommentResponse{
    bool succeded = 1;
}

message AddPostRequest{
    Post post = 1;
}

message AddPostResponse{
    bool succeded = 1;
}

message DeletePostRequest{
    int32 id = 1;
}

message DeletePostResponse{
    int32 postId = 1;
}

message GetCommentByIdRequest{
    int32 id = 1;
}

message GetCommentByIdResponse{
    Comment comment = 1;
}

message GetPostByIdRequest{
    int32 id = 1;
}

message GetPostByIdResponse{
    Post post = 1;
}

message GetPostsRequest{

}

message GetPostsResponse{
    repeated Post post = 1;
}

message UpdateCommentRequest{
    Comment newComment = 1;
}

message UpdateCommentResponse{
    Comment comment = 1;
}

message UpdatePostRequest{
    Post newPost = 1;
}

message UpdatePostResponse{
    Post post = 1;
}

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc AddComment(AddCommentRequest) returns (AddCommentResponse);
  rpc AddPost(AddPostRequest) returns (AddPostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc GetCommentById(GetCommentByIdRequest) returns (GetCommentByIdResponse);
  rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse);
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
  rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
}